fix story images alignment with title

--- a/components/Stories.module.css
+++ b/components/Stories.module.css
@@ -23,6 +23,9 @@
 .story {
     text-align: center;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .story__image {
